# mail_assistant

./: .gitignore  LICENSE  README.md  project_view.py  pyproject.toml  run.bat  run_fetchmail.bat  run_vector.bat  start_milvus.bat
docs/: architecture.md  mail_assistant.md  mcp_server.md
src/: log_config.py  mcp_server.py
src/mail_assistant/: fetch_mail.py  mail.py  mail_helper.py  main.py  vector_save.py
tests/: conftest.py  test_mcp_server.py
