[project]
name = "mail-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "pandas",
    "imapclient",
    "duckdb>=1.2.1",
    "python-dotenv>=1.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]
